--- a/massa-client/Cargo.toml
+++ b/massa-client/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = "1.0"
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.22"
 strum_macros = "0.22"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1.15", features = ["full", "tracing"] }
 # custom modules
 massa_models = { path = "../massa-models" }
 massa_signature = { path = "../massa-signature" }
