--- a/massa-consensus-worker/Cargo.toml
+++ b/massa-consensus-worker/Cargo.toml
@@ -18,8 +18,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sled = "0.34"
 thiserror = "1.0"
-tokio = { version = "1.11", features = ["full"] }
-tracing = {version = "0.1", features = ["max_level_debug", "release_max_level_debug"] }
+tokio = { version = "1.15", features = ["full", "tracing"] }
+tracing = "0.1"
 # custom modules
 massa_execution = { path = "../massa-execution" }
 massa_hash = { path = "../massa-hash" }
@@ -36,8 +36,7 @@ massa_graph = { path = "../massa-graph" }
 [dev-dependencies]
 pretty_assertions = "1.0"
 serial_test = "0.5"
-stderrlog = "0.5"
 tempfile = "3.2"
 
 [features]
-test = []
+sandbox = []
