--- a/massa-models/Cargo.toml
+++ b/massa-models/Cargo.toml
@@ -15,7 +15,7 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 rust_decimal = "1.15"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-tokio = { version = "1.11", features = ["full"] }
+tokio = { version = "1.15", features = ["full", "tracing"] }
 # custom modules
 massa_hash = { path = "../massa-hash" }
 massa_signature = { path = "../massa-signature" }
