--- a/massa-proof-of-stake-exports/Cargo.toml
+++ b/massa-proof-of-stake-exports/Cargo.toml
@@ -16,8 +16,8 @@ rand_xoshiro = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-tokio = { version = "1.11", features = ["full"] }
-tracing = {version = "0.1", features = ["max_level_debug", "release_max_level_debug"] }
+tokio = { version = "1.15", features = ["full", "tracing"] }
+tracing = "0.1"
 # custom modules
 massa_models = { path = "../massa-models" }
 massa_signature = { path = "../massa-signature" }
@@ -26,7 +26,6 @@ massa_hash = { path = "../massa-hash" }
 [dev-dependencies]
 pretty_assertions = "1.0"
 serial_test = "0.5"
-stderrlog = "0.5"
 tempfile = "3.2"
 
 [features]
