--- a/massa-protocol-exports/Cargo.toml
+++ b/massa-protocol-exports/Cargo.toml
@@ -16,8 +16,8 @@ rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-tokio = { version = "1.11", features = ["full"] }
-tracing = {version = "0.1", features = ["max_level_debug", "release_max_level_debug"] }
+tokio = { version = "1.15", features = ["full", "tracing"] }
+tracing = "0.1"
 # custom modules
 massa_hash = { path = "../massa-hash" }
 massa_logging = { path = "../massa-logging" }
@@ -29,5 +29,4 @@ massa_time = { path = "../massa-time" }
 [dev-dependencies]
 pretty_assertions = "1.0"
 serial_test = "0.5.1"
-stderrlog = "0.5"
 tempfile = "3.2"
