--- a/massa-time/Cargo.toml
+++ b/massa-time/Cargo.toml
@@ -11,7 +11,7 @@ chrono = "0.4"
 displaydoc = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-tokio = { version = "1.11", features = ["full"] }
+tokio = { version = "1.15", features = ["full", "tracing"] }
 
 [dev-dependencies]
 pretty_assertions = "1.0"
