--- a/massa-bootstrap/Cargo.toml
+++ b/massa-bootstrap/Cargo.toml
@@ -15,21 +15,24 @@ rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-tokio = { version = "1.15", features = ["full", "tracing"] }
+tokio = { version = "1.15", features = ["full"] }
 tracing = "0.1"
 # custom modules
 massa_consensus_exports = { path = "../massa-consensus-exports" }
+massa_execution = { path = "../massa-execution" }
+massa_graph = { path = "../massa-graph" }
 massa_hash = { path = "../massa-hash" }
 massa_logging = { path = "../massa-logging" }
 massa_models = { path = "../massa-models" }
 massa_network = { path = "../massa-network" }
+massa_proof_of_stake_exports = { path = "../massa-proof-of-stake-exports" }
 massa_signature = { path = "../massa-signature" }
 massa_time = { path = "../massa-time" }
-massa_execution = { path = "../massa-execution" }
-massa_graph = { path = "../massa-graph" }
-massa_proof_of_stake_exports = { path = "../massa-proof-of-stake-exports" }
 
 [dev-dependencies]
 bitvec = { version = "0.22", features = ["serde"] }
 pretty_assertions = "1.0"
 serial_test = "0.5"
+
+[features]
+instrument = ["tokio/tracing", "massa_consensus_exports/instrument", "massa_execution/instrument", "massa_graph/instrument", "massa_models/instrument", "massa_network/instrument", "massa_proof_of_stake_exports/instrument", "massa_time/instrument"]
