--- a/massa-client/Cargo.toml
+++ b/massa-client/Cargo.toml
@@ -15,27 +15,27 @@ dialoguer = { version = "0.9", git = "https://github.com/yvan-sraka/dialoguer.gi
 directories = "4.0"
 erased-serde = "0.3"
 futures = "0.3"
-jsonrpc-core-client = { version = "18.0.0", features = ["http", "tls"] }
-lazy_static = "1.4.0"
+jsonrpc-core-client = { version = "18.0", features = ["http", "tls"] }
+lazy_static = "1.4"
 paw = "1.0"
+rev_lines = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.22"
 strum_macros = "0.22"
-tokio = { version = "1.15", features = ["full", "tracing"] }
+tokio = { version = "1.15", features = ["full"] }
 # custom modules
 massa_models = { path = "../massa-models" }
 massa_signature = { path = "../massa-signature" }
 massa_time = { path = "../massa-time" }
 massa_wallet = { path = "../massa-wallet" }
-rev_lines = "0.2.1"
 
 [dev-dependencies]
 assert_cmd = "2.0"
 serial_test = "0.5"
 toml_edit = "0.8"
 
-
 [features]
 hash-prefix = ["massa_models/hash-prefix", "massa_signature/hash-prefix"]
+instrument = ["tokio/tracing", "massa_models/instrument", "massa_time/instrument"]
