--- a/massa-consensus-exports/Cargo.toml
+++ b/massa-consensus-exports/Cargo.toml
@@ -18,24 +18,25 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sled = "0.34"
 thiserror = "1.0"
-tokio = { version = "1.15", features = ["full", "tracing"] }
+tokio = { version = "1.15", features = ["full"] }
 tracing = "0.1"
 tempfile = "3.2"
 # custom modules
 massa_execution = { path = "../massa-execution" }
+massa_graph = { path = "../massa-graph" }
 massa_hash = { path = "../massa-hash" }
 massa_logging = { path = "../massa-logging" }
 massa_models = { path = "../massa-models" }
 massa_pool = { path = "../massa-pool" }
+massa_proof_of_stake_exports = { path = "../massa-proof-of-stake-exports" }
 massa_protocol_exports = { path = "../massa-protocol-exports" }
 massa_signature = { path = "../massa-signature" }
 massa_time = { path = "../massa-time" }
-massa_graph = { path = "../massa-graph" }
-massa_proof_of_stake_exports = { path = "../massa-proof-of-stake-exports" }
 
 [dev-dependencies]
 pretty_assertions = "1.0"
 serial_test = "0.5"
 
 [features]
+instrument = ["tokio/tracing", "massa_execution/instrument", "massa_graph/instrument", "massa_models/instrument", "massa_pool/instrument", "massa_proof_of_stake_exports/instrument", "massa_protocol_exports/instrument", "massa_time/instrument"]
 sandbox = []
