--- a/massa-execution/Cargo.toml
+++ b/massa-execution/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1"
+anyhow = "1.0"
 displaydoc = "0.2"
-lazy_static = "1.4.0"
-parking_lot = { version = "0.11.2" }
+lazy_static = "1.4"
+parking_lot = { version = "0.11" }
 rand = "0.8"
 rand_xoshiro = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-tokio = { version = "1.15", features = ["full", "tracing"] }
+tokio = { version = "1.15", features = ["full"] }
 tracing = "0.1"
 # custom modules
 massa_hash = { path = "../massa-hash" }
@@ -29,3 +29,6 @@ massa_signature = { path = "../massa-signature" }
 pretty_assertions = "1.0"
 serial_test = "0.5"
 tempfile = "3.2"
+
+[features]
+instrument = ["tokio/tracing", "massa_models/instrument", "massa_time/instrument"]
