--- a/massa-models/Cargo.toml
+++ b/massa-models/Cargo.toml
@@ -15,7 +15,7 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 rust_decimal = "1.15"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-tokio = { version = "1.15", features = ["full", "tracing"] }
+tokio = { version = "1.15", features = ["full"] }
 # custom modules
 massa_hash = { path = "../massa-hash" }
 massa_signature = { path = "../massa-signature" }
@@ -26,4 +26,5 @@ pretty_assertions = "1.0"
 serial_test = "0.5"
 
 [features]
-hash-prefix = []
+hash-prefix = ["massa_signature/hash-prefix"]
+instrument = ["tokio/tracing", "massa_time/instrument"]
