--- a/massa-pool/Cargo.toml
+++ b/massa-pool/Cargo.toml
@@ -12,7 +12,7 @@ num = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-tokio = { version = "1.15", features = ["full", "tracing"] }
+tokio = { version = "1.15", features = ["full"] }
 tracing = "0.1"
 # custom modules
 massa_hash = { path = "../massa-hash" }
@@ -25,3 +25,6 @@ massa_time = { path = "../massa-time" }
 [dev-dependencies]
 pretty_assertions = "1.0"
 serial_test = "0.5"
+
+[features]
+instrument = ["tokio/tracing", "massa_models/instrument", "massa_protocol_exports/instrument", "massa_time/instrument"]
