--- a/massa-protocol-worker/Cargo.toml
+++ b/massa-protocol-worker/Cargo.toml
@@ -10,13 +10,13 @@ edition = "2021"
 displaydoc = "0.2"
 futures = "0.3"
 itertools = "0.10"
-lazy_static = "1.4.0"
+lazy_static = "1.4"
 num_enum = "0.5"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-tokio = { version = "1.15", features = ["full", "tracing"] }
+tokio = { version = "1.15", features = ["full"] }
 tracing = "0.1"
 # custom modules
 massa_hash = { path = "../massa-hash" }
@@ -29,5 +29,8 @@ massa_time = { path = "../massa-time" }
 
 [dev-dependencies]
 pretty_assertions = "1.0"
-serial_test = "0.5.1"
+serial_test = "0.5"
 tempfile = "3.2"
+
+[features]
+instrument = ["tokio/tracing", "massa_models/instrument", "massa_network/instrument", "massa_protocol_exports/instrument", "massa_time/instrument"]
