--- a/massa-execution/Cargo.toml
+++ b/massa-execution/Cargo.toml
@@ -3,6 +3,7 @@ name = "massa_execution"
 version = "0.1.0"
 authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
